# time_charting_with_perf

./: README.md  capture.sh  delete_probe.sh  openvino_probes.csv  orbslam_probes.csv  parse_perf.py  probes.csv  remove_all_probes.sh  requirements.txt  set_probe.sh  set_probe_lib.sh  set_probe_single.sh  set_probes_csv.sh  set_probes_func.sh  set_probes_lib.sh  setup_dependency.sh  show_lib_symbols.sh  show_loaded_lib.sh
ctf2ctf/: .gitmodules  CMakeLists.txt  LICENSE.GPL.txt  LICENSE.US.txt  LICENSE.txt  README.md  clioptions.cpp  clioptions.h  config.h.in  ctf2ctf-gz.sh.in  ctf2ctf.cpp
ctf2ctf/cmake/modules/: FindBabeltrace.cmake
extra/: perf.py_  perf_support.patch
probes/: gazebo.csv  i915.csv  igdrcl.csv  intel_media.csv  opencl.csv  openvino.csv  openvino_probes.csv  orbslam.csv  orbslam_probes.csv  probes.csv  va.csv  xe.csv
scripts/: bashfulprofiler.sh  build_perf_with_ctf.sh  capture.sh  delete_probe.sh  gen_probes_lib.sh  parse_perf.py  remove_all_probes.sh  set_probe_single.sh  set_probes.sh  set_probes_csv.sh  set_probes_lib.sh  set_probes_module.sh  show_lib_symbols.sh  show_loaded_lib.sh
